--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -79,6 +79,7 @@
                   id="first"
                   name="first"
                   minlength="2"
+                  required
                 /><br>
               </div>
               <div
