--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -63,59 +63,65 @@
       <div class="bground">
         <div class="content">
           <span class="close"></span>
-          <div class="modal-body">
+          <div class="modal-body" id="modalBodyText">
             <form
               name="reserve"
+              id="reserve"
               action="index.html"
               method="get"
               onsubmit="return validate();"
             >
-            <div class="formData">
-              <label for="first">Prénom</label><br>
-              <input
-                class="text-control"
-                type="text"
-                id="first"
-                name="first"
-                minlength="2"
-                required
-              /><br>
-            </div>
-            <div class="formData">
-              <label for="last">Nom</label><br>
-              <input
-                class="text-control"
-                type="text"
-                id="last"
-                name="last"
-                minlength="2"
-                required
-              /><br>
-            </div>
-            <div class="formData">
-              <label for="email">E-mail</label><br>
-              <input
-                class="text-control"
-                type="email"
-                id="email"
-                name="email"
-                required
-              /><br>
-            </div>
-            <div class="formData">
-              <label for="birthdate">Date de naissance</label><br>
-              <input
-                class="text-control"
-                type="date"
-                id="birthdate"
-                name="birthdate"
-                required
-              /><br>
-            </div>
               <div
                 class="formData">
-                <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+                <label for="first">Prénom</label><br>
+                <input
+                  class="text-control"
+                  type="text"
+                  id="first"
+                  name="first"
+                  >
+                  <br>
+                <p class="errorFirst errorMessage"></p>
+              </div>
+              <div
+                class="formData">
+                <label for="last">Nom</label><br>
+                <input
+                  class="text-control"
+                  type="text"
+                  id="last"
+                  name="last"
+                ><br>
+                <p class="errorLast errorMessage"></p>
+              </div>
+              <div
+                class="formData">
+                <label for="email">E-mail</label><br>
+                <input
+                  class="text-control"
+                  type="email"
+                  id="email"
+                  name="email"
+                ><br>
+                <p class="errorEmail errorMessage"></p>
+              </div>
+              <div
+                class="formData">
+                <label for="birthdate">Date de naissance</label><br>
+                <input
+                  class="text-control"
+                  type="date"
+                  id="birthdate"
+                  name="birthdate"
+                ><br>
+                <p class="errorBirthdate errorMessage"></p>
+              </div>
+              <div
+                class="formData">
+                <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                <br>
+                <p class="errorQuantity errorMessage"></p>
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div
@@ -126,7 +132,7 @@
                   id="location1"
                   name="location"
                   value="New York"
-                />
+                >
                 <label class="checkbox-label" for="location1">
                   <span class="checkbox-icon"></span>
                   New York</label
@@ -137,7 +143,7 @@
                   id="location2"
                   name="location"
                   value="San Francisco"
-                />
+                >
                 <label class="checkbox-label" for="location2">
                   <span class="checkbox-icon"></span>
                   San Francisco</label
@@ -148,7 +154,7 @@
                   id="location3"
                   name="location"
                   value="Seattle"
-                />
+                >
                 <label class="checkbox-label" for="location3">
                   <span class="checkbox-icon"></span>
                   Seattle</label
@@ -159,7 +165,7 @@
                   id="location4"
                   name="location"
                   value="Chicago"
-                />
+                >
                 <label class="checkbox-label" for="location4">
                   <span class="checkbox-icon"></span>
                   Chicago</label
@@ -170,7 +176,7 @@
                   id="location5"
                   name="location"
                   value="Boston"
-                />
+                >
                 <label class="checkbox-label" for="location5">
                   <span class="checkbox-icon"></span>
                   Boston</label
@@ -181,11 +187,13 @@
                   id="location6"
                   name="location"
                   value="Portland"
-                />
+                >
                 <label class="checkbox-label" for="location6">
                   <span class="checkbox-icon"></span>
                   Portland</label
                 >
+              <br>
+              <p class="errorLocation errorMessage"></p>  
               </div>
 
               <div
@@ -195,28 +203,28 @@
                   type="checkbox"
                   id="checkbox1"
                   checked
-                />
-                <label class="checkbox2-label" for="checkbox1" required>
+                >
+                <label class="checkbox2-label" for="checkbox1">
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
                 <br>
-                <input class="checkbox-input" type="checkbox" id="checkbox2" />
+                <p class="errorCheckbox errorMessage"></p>
+                <input class="checkbox-input" type="checkbox" id="checkbox2">
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
-                  Je Je souhaite être prévenu des prochains évènements.
+                  Je souhaite être prévenu des prochains évènements.
                 </label>
                 <br>
               </div>
               <input
-                class="btn-submit"
+                class="btn-submit button"
+                id="btn-submit"
                 type="submit"
-                class="button"
                 value="C'est parti"
-              />
+              >
             </form>
           </div>
-        </div>
       </div>
     </main>
     <footer>
