--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -223,7 +223,14 @@
                 type="submit"
                 value="C'est parti"
               >
+              
             </form>
+          </div>
+          <div id="confirmation-Message" class="confirmation-Message">
+            <h1>Merci pour votre inscription.</h1>     
+              <button class="btn-signup confirmation-btn">
+                Fermer
+              </button>
           </div>
       </div>
     </main>
