Feat: Tests manuels

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -227,7 +227,7 @@
             </form>
           </div>
           <div id="confirmation-Message" class="confirmation-Message">
-            <h1>Merci pour votre inscription.</h1>     
+            <h1>Merci ! Votre réservation a été reçue.</h1>     
               <button class="btn-signup confirmation-btn">
                 Fermer
               </button>
