--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" >
     <title>Reservation</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" href="css/modal.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" >
+    <link rel="stylesheet" href="css/modal.css" >
+    <link rel="stylesheet" href="css/styles.css" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link
       href="https://fonts.googleapis.com/css?family=DM+Sans"
       rel="stylesheet"
-    />
+    >
   </head>
   <body>
     <header>
       <div class="topnav" id="myTopnav">
         <div class="header-logo">
-        <img alt="logo" src="img/Logo.png" />
-      </div>
-      <div class="main-navbar">
+          <img alt="logo" src="img/Logo.png" >
+        </div>
+        <div class="main-navbar">
                 <!-- <a href="#" class="active"><span>Accueil</span></a> -->
-        <a href="#">
-          <span>Détails de l'évènement</span>
-        </a>
-        <a href="#">
-          <span>À propos</span>
-        </a>
-        <a href="#">
-          <span>Contact</span>
-        </a>
-        <a href="#">
-          <span>Évènements passés</span>
-        </a>
-        <a href="javascript:void(0);" class="icon" onclick="editNav()">
-          <i class="fa fa-bars"></i>
-        </a>
+          <a href="#">
+            <span>Détails de l'évènement</span>
+          </a>
+          <a href="#">
+            <span>À propos</span>
+          </a>
+          <a href="#">
+            <span>Contact</span>
+          </a>
+          <a href="#">
+            <span>Évènements passés</span>
+          </a>
+          <a href="javascript:void(0);" class="icon" onclick="editNav()">
+            <i class="fa fa-bars"></i>
+          </a>
+        </div>
       </div>
     </header>
     <main>
@@ -53,7 +54,7 @@
           </button>
         </div>
         <div class="hero-img">
-          <img src="img/bg_img.jpg" alt="img" />
+          <img src="img/bg_img.jpg" alt="img" >
         </div>
         <button class="btn-signup modal-btn">
           je m'inscris
@@ -232,6 +233,7 @@
                 Fermer
               </button>
           </div>
+      </div>
       </div>
     </main>
     <footer>
