--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" >
+    <meta charset="utf-8" />
     <title>Reservation</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" >
-    <link rel="stylesheet" href="css/modal.css" >
-    <link rel="stylesheet" href="css/styles.css" >
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="stylesheet" href="css/modal.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=DM+Sans"
       rel="stylesheet"
-    >
+    />
   </head>
   <body>
     <header>
       <div class="topnav" id="myTopnav">
         <div class="header-logo">
-          <img alt="logo" src="img/Logo.png" >
+          <img alt="logo" src="img/Logo.png" />
         </div>
         <div class="main-navbar">
-                <!-- <a href="#" class="active"><span>Accueil</span></a> -->
+          <!-- <a href="#" class="active"><span>Accueil</span></a> -->
           <a href="#">
             <span>Détails de l'évènement</span>
           </a>
@@ -42,23 +45,19 @@
       <div class="hero-section">
         <div class="hero-content">
           <h1 class="hero-headline">
-            Marathon national<br>
+            Marathon national<br />
             de jeux vidéos
           </h1>
           <p class="hero-text">
-            Vous aimez jouer ? Notre prochain évènement gaming est ouvert
-            aux réservations... Places limitées !
+            Vous aimez jouer ? Notre prochain évènement gaming est ouvert aux
+            réservations... Places limitées !
           </p>
-          <button class="btn-signup modal-btn">
-            je m'inscris
-          </button>
+          <button class="btn-signup modal-btn">je m'inscris</button>
         </div>
         <div class="hero-img">
-          <img src="img/bg_img.jpg" alt="img" >
+          <img src="img/bg_img.jpg" alt="img" />
         </div>
-        <button class="btn-signup modal-btn">
-          je m'inscris
-        </button>
+        <button class="btn-signup modal-btn">je m'inscris</button>
       </div>
 
       <div class="bground">
@@ -72,68 +71,74 @@
               method="get"
               onsubmit="return validate();"
             >
-              <div
-                class="formData">
-                <label for="first">Prénom</label><br>
+              <div class="formData">
+                <label for="first">Prénom</label><br />
                 <input
                   class="text-control"
                   type="text"
                   id="first"
                   name="first"
-                  >
-                  <br>
+                />
+                <br />
                 <p class="errorFirst errorMessage"></p>
               </div>
-              <div
-                class="formData">
-                <label for="last">Nom</label><br>
+              <div class="formData">
+                <label for="last">Nom</label><br />
                 <input
                   class="text-control"
                   type="text"
                   id="last"
                   name="last"
-                ><br>
+                /><br />
                 <p class="errorLast errorMessage"></p>
               </div>
-              <div
-                class="formData">
-                <label for="email">E-mail</label><br>
+              <div class="formData">
+                <label for="email">E-mail</label><br />
                 <input
                   class="text-control"
                   type="email"
                   id="email"
                   name="email"
-                ><br>
+                /><br />
                 <p class="errorEmail errorMessage"></p>
               </div>
-              <div
-                class="formData">
-                <label for="birthdate">Date de naissance</label><br>
+              <div class="formData">
+                <label for="birthdate">Date de naissance</label><br />
                 <input
                   class="text-control"
                   type="date"
                   id="birthdate"
                   name="birthdate"
-                ><br>
+                /><br />
                 <p class="errorBirthdate errorMessage"></p>
               </div>
-              <div
-                class="formData">
-                <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
-                <br>
+              <div class="formData">
+                <label for="quantity"
+                  >À combien de tournois GameOn avez-vous déjà participé
+                  ?</label
+                ><br />
+                <input
+                  type="number"
+                  class="text-control"
+                  id="quantity"
+                  name="quantity"
+                  min="0"
+                  max="99"
+                />
+                <br />
                 <p class="errorQuantity errorMessage"></p>
               </div>
-              <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
-              <div
-                class="formData">
+              <p class="text-label">
+                A quel tournoi souhaitez-vous participer cette année ?
+              </p>
+              <div class="formData">
                 <input
                   class="checkbox-input"
                   type="radio"
                   id="location1"
                   name="location"
                   value="New York"
-                >
+                />
                 <label class="checkbox-label" for="location1">
                   <span class="checkbox-icon"></span>
                   New York</label
@@ -144,7 +149,7 @@
                   id="location2"
                   name="location"
                   value="San Francisco"
-                >
+                />
                 <label class="checkbox-label" for="location2">
                   <span class="checkbox-icon"></span>
                   San Francisco</label
@@ -155,7 +160,7 @@
                   id="location3"
                   name="location"
                   value="Seattle"
-                >
+                />
                 <label class="checkbox-label" for="location3">
                   <span class="checkbox-icon"></span>
                   Seattle</label
@@ -166,7 +171,7 @@
                   id="location4"
                   name="location"
                   value="Chicago"
-                >
+                />
                 <label class="checkbox-label" for="location4">
                   <span class="checkbox-icon"></span>
                   Chicago</label
@@ -177,7 +182,7 @@
                   id="location5"
                   name="location"
                   value="Boston"
-                >
+                />
                 <label class="checkbox-label" for="location5">
                   <span class="checkbox-icon"></span>
                   Boston</label
@@ -188,58 +193,52 @@
                   id="location6"
                   name="location"
                   value="Portland"
-                >
+                />
                 <label class="checkbox-label" for="location6">
                   <span class="checkbox-icon"></span>
                   Portland</label
                 >
-              <br>
-              <p class="errorLocation errorMessage"></p>  
+                <br />
+                <p class="errorLocation errorMessage"></p>
               </div>
 
-              <div
-                class="formData">
+              <div class="formData">
                 <input
                   class="checkbox-input"
                   type="checkbox"
                   id="checkbox1"
                   checked
-                >
+                />
                 <label class="checkbox2-label" for="checkbox1">
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
-                <br>
+                <br />
                 <p class="errorCheckbox errorMessage"></p>
-                <input class="checkbox-input" type="checkbox" id="checkbox2">
+                <input class="checkbox-input" type="checkbox" id="checkbox2" />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
                   Je souhaite être prévenu des prochains évènements.
                 </label>
-                <br>
+                <br />
               </div>
               <input
                 class="btn-submit button"
                 id="btn-submit"
                 type="submit"
                 value="C'est parti"
-              >
-              
+              />
             </form>
           </div>
           <div id="confirmation-Message" class="confirmation-Message">
-            <h1>Merci ! Votre réservation a été reçue.</h1>     
-              <button class="btn-signup confirmation-btn">
-                Fermer
-              </button>
+            <h1>Merci ! Votre réservation a été reçue.</h1>
+            <button class="btn-signup confirmation-btn">Fermer</button>
           </div>
-      </div>
+        </div>
       </div>
     </main>
     <footer>
-      <p class="copyrights">
-        Copyright 2014 - 2022, GameOn Inc.
-      </p>
+      <p class="copyrights">Copyright 2014 - 2022, GameOn Inc.</p>
     </footer>
     <script src="modal.js"></script>
   </body>
